# services/api/src/endpoints/system/server/stats.rs
@@ -54,7 +54,7 @@ pub async fn server_stats_get(
     Ok(Get::auth_response_ok(json))
 }
 
-#[allow(clippy::cast_sign_loss)]
+#[allow(clippy::cast_possible_truncation, clippy::cast_sign_loss)]
 async fn get_one_inner(context: &ApiContext) -> Result<JsonServerStats, HttpError> {
     let conn = &mut *context.conn().await;
 
@@ -63,6 +63,7 @@ async fn get_one_inner(context: &ApiContext) -> Result<JsonServerStats, HttpErro
     let this_week = timestamp - THIS_WEEK;
     let this_month = timestamp - THIS_MONTH;
 
+    // users
     let weekly_users = schema::user::table
         .filter(schema::user::created.ge(this_week))
         .select(count(schema::user::id))
@@ -86,13 +87,38 @@ async fn get_one_inner(context: &ApiContext) -> Result<JsonServerStats, HttpErro
         total: total_users as u64,
     };
 
+    // projects
+    let weekly_projects = schema::project::table
+        .filter(schema::project::created.ge(this_week))
+        .select(count(schema::project::id))
+        .first::<i64>(conn)
+        .map_err(resource_not_found_err!(User))?;
+
+    let monthly_projects = schema::project::table
+        .filter(schema::project::created.ge(this_month))
+        .select(count(schema::project::id))
+        .first::<i64>(conn)
+        .map_err(resource_not_found_err!(User))?;
+
+    let total_projects = schema::project::table
+        .select(count(schema::project::id))
+        .first::<i64>(conn)
+        .map_err(resource_not_found_err!(User))?;
+
+    let projects_cohort = JsonCohort {
+        week: weekly_projects as u64,
+        month: monthly_projects as u64,
+        total: total_projects as u64,
+    };
+
+    // median reports per project
     let mut weekly_reports = schema::report::table
         .filter(schema::report::created.ge(this_week))
         .group_by(schema::report::project_id)
         .select(count(schema::report::id))
         .load::<i64>(conn)
         .map_err(resource_not_found_err!(Report))?;
-    let avg_weekly_reports = median(&mut weekly_reports);
+    let weekly_reports = padded_median(total_projects as usize, &mut weekly_reports);
 
     let mut monthly_reports = schema::report::table
         .filter(schema::report::created.ge(this_month))
@@ -100,24 +126,25 @@ async fn get_one_inner(context: &ApiContext) -> Result<JsonServerStats, HttpErro
         .select(count(schema::report::id))
         .load::<i64>(conn)
         .map_err(resource_not_found_err!(Report))?;
-    let avg_monthly_reports = median(&mut monthly_reports);
+    let monthly_reports = padded_median(total_projects as usize, &mut monthly_reports);
 
     let mut total_reports = schema::report::table
         .group_by(schema::report::project_id)
         .select(count(schema::report::id))
         .load::<i64>(conn)
         .map_err(resource_not_found_err!(Report))?;
-    let avg_total_reports = median(&mut total_reports);
+    let total_reports = padded_median(total_projects as usize, &mut total_reports);
 
     let reports_cohort = JsonCohortAvg {
-        week: avg_weekly_reports,
-        month: avg_monthly_reports,
-        total: avg_total_reports,
+        week: weekly_reports,
+        month: monthly_reports,
+        total: total_reports,
     };
 
     Ok(JsonServerStats {
         timestamp: now,
         users: users_cohort,
+        projects: projects_cohort,
         reports: reports_cohort,
     })
 }
@@ -125,21 +152,32 @@ async fn get_one_inner(context: &ApiContext) -> Result<JsonServerStats, HttpErro
 #[allow(
     clippy::integer_division,
     clippy::cast_precision_loss,
+    clippy::cast_sign_loss,
     clippy::indexing_slicing
 )]
-fn median(array: &mut Vec<i64>) -> f64 {
-    if array.is_empty() {
+fn padded_median(total: usize, array: &mut Vec<i64>) -> f64 {
+    if total == 0 {
         return 0.0;
     }
 
     array.sort_unstable();
 
-    let size = array.len();
-    if (size % 2) == 0 {
-        let left = size / 2 - 1;
-        let right = size / 2;
-        (array[left] as f64 + array[right] as f64) / 2.0
+    let zeros = total - array.len();
+    if total % 2 == 0 {
+        let left = total / 2 - 1;
+        let right = total / 2;
+        let (left_index, right_index) = match (left.checked_sub(zeros), right.checked_sub(zeros)) {
+            (Some(left_index), Some(right_index)) => (left_index, right_index),
+            (None, Some(right_index)) => (0, right_index),
+            (Some(left_index), None) => (left_index, 0),
+            (None, None) => return 0.0,
+        };
+        (array[left_index] as f64 + array[right_index] as f64) / 2.0
     } else {
-        array[size / 2] as f64
+        let middle = total / 2;
+        match middle.checked_sub(zeros) {
+            Some(middle_index) => array[middle_index] as f64,
+            None => 0.0,
+        }
     }
 }
